2005-10-27  Manish Singh  <yosh@gimp.org>

	* app/paint-funcs/paint-funcs.h: declare component_pixels,
	combine_mask_and_alpha_channel_{stipple,stroke}. Fixes bug #319811.

2005-10-27  Michael Natterer  <mitch@gimp.org>

	* configure.in: check for gnome-keyring.

	* plug-ins/uri/uri-backend.h
	* plug-ins/uri/uri-backend-wget.c
	* plug-ins/uri/uri-backend-gnomevfs.c: added "plugin_name",
	boolean "run" and "run_mode" parameters to uri_backend_init().

	* plug-ins/uri/uri-backend-gnomevfs.c (uri_backend_init):
	initialize the gnome authentication manager only when called
	interactively from "run". Also call gimp_ui_init() when using the
	auth manager, since recent versions seem to require an already
	initialized GTK+. When running noninteractively and gnome-keyring
	is available, implement the needed GnomeVFS authentication
	callbacks ourselves and ask gnome-keyring directly.

	* plug-ins/uri/uri.c: pass the additional parameters to
	uri_backend_init().

2005-10-26  Carol Spears  <carol@gimp.org>

	* app/actions/image-actions.c: added colors-info-menu and 
        colors-modify-menu as children of colors-menu

	* menus/image-menu.xml.in: changed Modify placeholder to 
        colors-modify-menu menuaction and added color-info-menu action to 
        colors-menu

        * plug-ins/common/colortoalpha.c: moved to Colors/Modify in the 
        registration part.

2005-10-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-console.c (script_fu_console_run):
	removed run-mode check.

2005-10-26  Michael Natterer  <mitch@gimp.org>

	Fixed bug #313547:

	* app/widgets/gimpdataeditor.c
	(gimp_data_editor_set_aux_info)
	(gimp_data_editor_get_aux_info): store the state of edit_active
	in sessionrc.

	(gimp_data_editor_constructor): enable edit_active by default.

2005-10-25  Michael Natterer  <mitch@gimp.org>

	Let the data editors optionally follow the active brush, palette
	and gradient. Still needs to be saved in sessionrc and probably