@@ -50,8 +50,7 @@ header files installed.
   5. You may want to install other third party libraries or programs
      that are needed for some of the available plugins. We recommend
      to check that the following libraries are installed: libpng,
-     libjpeg, libpoppler, libtiff, gimp-print (4.2.x), gtkhtml-2,
-     libmng, librsvg, libwmf.
+     libjpeg, libpoppler, libtiff, gtkhtml-2, libmng, librsvg, libwmf.
 
   6. Configure the GIMP by running the `configure' script. You may want
      to pass some options to it, see below.
@@ -143,6 +142,13 @@ These are:
   --without-gnomeprint.  If you don't want to build the Print plug-in
      that uses libgnomeprint, you can use --without-gnomeprint.
 
+  --without-gimpprint.  The gimp-print plug-in provides Print support
+     by means of libgimpprint (see http://gimp-print.sourceforge.net/).
+     The gimp-print project has changed its name to gutenprint in the
+     meantime and you may find that libgimpprint 4.2 is somewhat outdated.
+     You can disable the build of this plug-in and instead grab a beta
+     release of gutenprint which comes with a GIMP plug-in.
+
   --with-gif-compression=[lzw|rle|none].  Allows to tune the compression
      algorithm used by the GIF plug-in. If you are afraid of Unisys' LZW
      patent (which should have expired in most countries by now), you
@@ -159,13 +165,6 @@ These are:
      the path so it points to the place where glib and gtk+ installled
      their API references so that the libgimp reference can link to
      them.
-
-  --disable-print.  The print plug-in requires a recent version of
-     libgimpprint. If you don't have it already installed, download
-     it from http://gimp-print.sourceforge.net/. You need to pass
-     --without-gimp to gimp-print's configure script to build it without
-     having gimp-1.2 installed. If you want to compile GIMP without
-     support for printing, use the --disable-print option.
 
   --enable-mp. This options control whether to build GIMP with or without
      support for multiple processors. This option is off by default. If
@@ -279,10 +278,6 @@ Set your CPPFLAGS environment variable to look for the header file in a
 certain place, e.g. if you are working in a bash shell you would say:
       export CPPFLAGS="-I<path_to_header_file> -I<path_to_another_one>"
 before you run configure.
-
-* If the check for gimpprint fails even though you have version 4.2.x
-  installed, please try the latest available 4.2 package (which is
-  gimp-print 4.2.7 at the time of this writing).
 
 
       Generic Instructions for Building Auto-Configured Packages
